--- a/docs/source/bibtex/ref.bib
+++ b/docs/source/bibtex/ref.bib
@@ -1,1 +1,1 @@
-@article{reference:01,author = {De Carlo F and Gursoy D and Marone F and Rivers M and Parkinson YD and Khan F and Schwarz N and Vine DJ and Vogt S and Gleber SC and Narayanan S and Newville M and Lanzirotti T and Sun Y and Hong YP and Jacobsen C},title = {Scientific Data Exchange: a schema for HDF5-based storage of raw and analyzed data},journal = {Journal of Synchrotron Radiation},year = {2014},volume = {21},number = {6},pages = {1224--1230}}
+@article{Vo:14,author = {Nghia T. Vo and Michael Drakopoulos and Robert C. Atwood and Christina Reinhard},journal = {Opt. Express},keywords = {Tomographic image processing; X-ray imaging; Synchrotron radiation; High throughput optics; Image metrics; Image reconstruction; Image registration; Three dimensional imaging; Tomography},number = {16},pages = {19078--19086},publisher = {OSA},title = {Reliable method for calculating the center of rotation in parallel-beam tomography},volume = {22},month = {Aug},year = {2014},url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-22-16-19078},doi = {10.1364/OE.22.019078},abstract = {High-throughput processing of parallel-beam X-ray tomography at synchrotron facilities is lacking a reliable and robust method to determine the center of rotation in an automated fashion, i.e. without the need for a human scorer. Well-known techniques based on center of mass calculation, image registration, or reconstruction evaluation work well under favourable conditions but they fail in cases where samples are larger than field of view, when the projections show low signal-to-noise, or when optical defects dominate the contrast. Here we propose an alternative technique which is based on the Fourier analysis of the sinogram. Our technique shows excellent performance particularly on challenging data.},}
